--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <div class="box">
                 <div class="title">Статьи</div>
                 <div class="link">
-                    <a href="#">смотреть все</a>
+                    <a href="page2.html">смотреть все</a>
                 </div>
             </div>
             <div class="box">
                 <div class="item">
-                    <a href="#">
+                    <a href="page2.html">
                         <span class="img">
                             <img src="img/img1.jpg" alt="">
                         </span>
@@ -62,7 +62,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page1.html">
                         <span class="img">
                             <img src="img/img2.jpg" alt="">
                         </span>
@@ -85,12 +85,12 @@
             <div class="box">
                 <div class="title">Лайфхаки</div>
                 <div class="link">
-                    <a href="#">смотреть все</a>
+                    <a href="page3.html">смотреть все</a>
                 </div>
             </div>
             <div class="box">
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img3.png" alt="">
                         </span>
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img4.png" alt="">
                         </span>
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img5.png" alt="">
                         </span>
@@ -135,7 +135,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img6.png" alt="">
                         </span>
