--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <div class="box">
                 <div class="title">Статьи</div>
                 <div class="link">
-                    <a href="page2.html">смотреть все</a>
+                    <a href="page.html">смотреть все</a>
                 </div>
             </div>
             <div class="box">
                 <div class="item">
-                    <a href="page2.html">
+                    <a href="page.html">
                         <span class="img">
                             <img src="img/img1.jpg" alt="">
                         </span>
@@ -85,7 +85,7 @@
             <div class="box">
                 <div class="title">Лайфхаки</div>
                 <div class="link">
-                    <a href="page3.html">смотреть все</a>
+                    <a href="page2.html">смотреть все</a>
                 </div>
             </div>
             <div class="box">
@@ -157,12 +157,12 @@
             <div class="box">
                 <div class="title">Обзоры</div>
                 <div class="link">
-                    <a href="#">смотреть все</a>
+                    <a href="page3.html">смотреть все</a>
                 </div>
             </div>
             <div class="box">
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img7.jpg" alt="">
                         </span>
@@ -178,7 +178,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img8.jpg" alt="">
                         </span>
@@ -194,7 +194,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img9.jpg" alt="">
                         </span>
@@ -210,7 +210,7 @@
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="page5.html">
                         <span class="img">
                             <img src="img/img10.jpg" alt="">
                         </span>
@@ -233,11 +233,11 @@
             <div class="box">
                 <div class="title">Личности</div>
                 <div class="link">
-                    <a href="#">смотреть все</a>
+                    <a href="page4.html">смотреть все</a>
                 </div>
             </div>
             <div class="item">
-                <a href="#">
+                <a href="page5.html">
                     <span class="img">
                         <img src="img/img11.png" alt="">
                     </span>
