--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
-<!DOCTYPE html><html lang="ru"><head>
-  <meta charset="utf-8">
-  <title>Beep</title>
-  <base href="/Beep/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@font-face{font-family:Gilroy;src:url(Gilroy-Medium.0418c47436c65bb5.eot);src:url(Gilroy-Medium.0418c47436c65bb5.eot?#iefix) format("embedded-opentype"),url(Gilroy-Medium.8acb5781ce311ba9.woff) format("woff"),url(Gilroy-Medium.b80b2845982b9b26.ttf) format("truetype");font-weight:500;font-style:normal}@font-face{font-family:Gilroy;src:url(Gilroy-SemiBoldItalic.08b878341cc80e1a.eot);src:url(Gilroy-SemiBoldItalic.08b878341cc80e1a.eot?#iefix) format("embedded-opentype"),url(Gilroy-SemiBoldItalic.e45cdfe355b5f4ec.woff) format("woff"),url(Gilroy-SemiBoldItalic.b6fe57c1437e8792.ttf) format("truetype");font-weight:600;font-style:italic}@font-face{font-family:Gilroy;src:url(Gilroy-SemiBold.5873a7c79fb16fae.eot);src:url(Gilroy-SemiBold.5873a7c79fb16fae.eot?#iefix) format("embedded-opentype"),url(Gilroy-SemiBold.4e81fe9cba68eadc.woff) format("woff"),url(Gilroy-SemiBold.6ed5cf34b1618c0b.ttf) format("truetype");font-weight:600;font-style:normal}*,:after,:before{box-sizing:border-box;padding:0;margin:0}body{font-family:Gilroy,sans-serif;font-size:18px;font-weight:500;line-height:21.6px;text-align:left;color:#000;background:#fff}</style><link rel="stylesheet" href="styles.b9785aff7c73b544.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b9785aff7c73b544.css"></noscript></head>
-<body>
-  <app-root></app-root>
-<script src="runtime.150d32877b8b502a.js" type="module"></script><script src="polyfills.1e1cc43544e0d0eb.js" type="module"></script><script src="main.55d7c6404644bca2.js" type="module"></script>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Beep</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <style>@font-face {
+        font-family: Gilroy;
+        src: url(Gilroy-Medium.0418c47436c65bb5.eot);
+        src: url(Gilroy-Medium.0418c47436c65bb5.eot?#iefix) format("embedded-opentype"), url(Gilroy-Medium.8acb5781ce311ba9.woff) format("woff"), url(Gilroy-Medium.b80b2845982b9b26.ttf) format("truetype");
+        font-weight: 500;
+        font-style: normal
+    }
 
-</body></html>
+    @font-face {
+        font-family: Gilroy;
+        src: url(Gilroy-SemiBoldItalic.08b878341cc80e1a.eot);
+        src: url(Gilroy-SemiBoldItalic.08b878341cc80e1a.eot?#iefix) format("embedded-opentype"), url(Gilroy-SemiBoldItalic.e45cdfe355b5f4ec.woff) format("woff"), url(Gilroy-SemiBoldItalic.b6fe57c1437e8792.ttf) format("truetype");
+        font-weight: 600;
+        font-style: italic
+    }
+
+    @font-face {
+        font-family: Gilroy;
+        src: url(Gilroy-SemiBold.5873a7c79fb16fae.eot);
+        src: url(Gilroy-SemiBold.5873a7c79fb16fae.eot?#iefix) format("embedded-opentype"), url(Gilroy-SemiBold.4e81fe9cba68eadc.woff) format("woff"), url(Gilroy-SemiBold.6ed5cf34b1618c0b.ttf) format("truetype");
+        font-weight: 600;
+        font-style: normal
+    }
+
+    *, :after, :before {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0
+    }
+
+    body {
+        font-family: Gilroy, sans-serif;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 21.6px;
+        text-align: left;
+        color: #000;
+        background: #fff
+    }</style>
+    <link rel="stylesheet" href="Beep/styles.b9785aff7c73b544.css" media="print" onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet" href="Beep/styles.b9785aff7c73b544.css">
+    </noscript>
+</head>
+<body>
+<app-root></app-root>
+<script src="Beep/runtime.150d32877b8b502a.js" type="module"></script>
+<script src="Beep/polyfills.1e1cc43544e0d0eb.js" type="module"></script>
+<script src="Beep/main.55d7c6404644bca2.js" type="module"></script>
+
+</body>
+</html>
