--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Beep</title>
-    <base href="/">
+    <base href="/Beep/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>@font-face {
@@ -45,16 +45,16 @@
         color: #000;
         background: #fff
     }</style>
-    <link rel="stylesheet" href="Beep/styles.b9785aff7c73b544.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="styles.b9785aff7c73b544.css" media="print" onload="this.media='all'">
     <noscript>
-        <link rel="stylesheet" href="Beep/styles.b9785aff7c73b544.css">
+        <link rel="stylesheet" href="styles.b9785aff7c73b544.css">
     </noscript>
 </head>
 <body>
 <app-root></app-root>
-<script src="Beep/runtime.150d32877b8b502a.js" type="module"></script>
-<script src="Beep/polyfills.1e1cc43544e0d0eb.js" type="module"></script>
-<script src="Beep/main.55d7c6404644bca2.js" type="module"></script>
+<script src="runtime.150d32877b8b502a.js" type="module"></script>
+<script src="polyfills.1e1cc43544e0d0eb.js" type="module"></script>
+<script src="main.55d7c6404644bca2.js" type="module"></script>
 
 </body>
 </html>
